<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title_chess_quiz"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="38sp"
                android:textStyle="bold"/>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/hello"
                android:textColor="#fff"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="12dp"
                android:text="@string/quiz_intro"
                android:textColor="#fff"
                android:layout_marginBottom="10dp"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#fff"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="@string/enter_username"
                    android:textSize="20sp"/>


                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textColorHint="#d3d3d3"
                    android:hint="@string/username_example"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question1" />

                <RadioGroup
                    style="@style/RadioGroup"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/no"
                        style="@style/RadioButton"
                        android:text="@string/no" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question2" />

                <RadioGroup
                    style="@style/RadioGroup"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/king" />

                    <RadioButton
                        android:id="@+id/pawn"
                        style="@style/RadioButton"
                        android:text="@string/pawn" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/bishop" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/rookie" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question3" />

                <RadioGroup
                    style="@style/RadioGroup"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/nakamura" />

                    <RadioButton
                        android:id="@+id/carlsen"
                        style="@style/RadioButton"
                        android:text="@string/carlsen" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/bu" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/kramnik" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question4" />

                <ImageView
                    style="@style/ImageView"
                    android:src="@drawable/puzzle" />

                <RadioGroup
                    style="@style/RadioGroup"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/nf7" />

                    <RadioButton
                        android:id="@+id/qg8"
                        style="@style/RadioButton"
                        android:text="@string/qg8" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/qxg5" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/qxb7" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question5" />

                <CheckBox
                    android:id="@+id/q5_first_checkbox"
                    style="@style/WrapContentStyle"
                    android:layout_marginTop="10dp"
                    android:text="@string/stalemate"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/q5_second_checkbox"
                    style="@style/WrapContentStyle"
                    android:layout_marginTop="10dp"
                    android:text="@string/repetition"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/q5_third_checkbox"
                    style="@style/WrapContentStyle"
                    android:layout_marginTop="10dp"
                    android:text="@string/agreement"
                    android:textColor="#000" />

                <CheckBox
                    android:id="@+id/q5_fourth_checkbox"
                    style="@style/WrapContentStyle"
                    android:layout_marginTop="10dp"
                    android:text="@string/illegal"
                    android:textColor="#000" />

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question6" />

                <EditText
                    android:id="@+id/check"
                    style="@style/EditText" />

            </LinearLayout>

            <LinearLayout style="@style/QuestionContainer">

                <TextView
                    style="@style/QuestionText"
                    android:text="@string/question7" />

                <EditText
                    android:id="@+id/sixtyfour"
                    style="@style/EditText"
                    android:inputType="number"/>

            </LinearLayout>

            <RelativeLayout
                style="@style/MatchParentStyle"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/score_button"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:onClick="markQuiz"
                    android:padding="15dp"
                    android:text="Submit" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>